Added a /project take and /status command